tests/deprecated_type/deprecated_type.exp
Error ---------------------------------------------------------------------------------------------------- index.js:3:10

Deprecated type. Using `*` types is not recommended! [deprecated-type]

   3| const a: * = 5;
               ^



Found 1 error
